--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <strong>From:</strong> ${tx.from.slice(0, 10)}...<br>
             <strong>To:</strong> ${tx.to?.slice(0, 10) || 'Contract'}...<br>
             <strong>MON:</strong> ${mon.toFixed(4)}<br>
-            <a href="https://explorer.testnet.monad.xyz/tx/${tx.hash}" target="_blank" style="color:#fff;text-decoration:underline">View Tx</a>
+            <a href="https://monadexplorer.com/${tx.hash}" target="_blank" style="color:#fff;text-decoration:underline">View Tx</a>
           `;
 
           document.body.prepend(box);
