--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       box.innerHTML = `
         <strong>${mon.toFixed(4)} MON</strong><br>
-        <a href="https://tnet.monvision.io/tx/${tx.hash}" target="_blank" style="color:#fff;text-decoration:underline">View Tx</a>
+        <a href="https://monadexplorer.com/tx/${tx.hash}" target="_blank" style="color:#fff;text-decoration:underline">View Tx</a>
       `;
 
       container.prepend(box);
