--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       box.innerHTML = `
         <strong style="font-size: 1.2em;">${mon.toFixed(4)} MON</strong>
-        <a href="https://monadexplorer.com/tx/${tx.hash}" target="_blank" style="color:#fff;text-decoration:underline">View Tx</a>
+        <a href="https://testnet.monvision.io/transactions/${tx.hash}" target="_blank" style="color:#fff;text-decoration:underline">View Tx</a>
       `;
 
       container.prepend(box);
